@@ -507,7 +507,8 @@ consider_testing_reachability(int test_or, int test_dir)
                 CONN_TYPE_DIR, me->addr, me->dir_port,
                 DIR_PURPOSE_FETCH_SERVERDESC)) {
     /* ask myself, via tor, for my server descriptor. */
-    directory_initiate_command(me->address, me->addr, me->dir_port,
+    directory_initiate_command(me->address, me->addr,
+                               me->or_port, me->dir_port,
                                0, me->cache_info.identity_digest,
                                DIR_PURPOSE_FETCH_SERVERDESC,
                                1, "authority", NULL, 0);
